# String-Extra

./: .clang-format  .gitignore  CMakeLists.bak  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  launch.vs.json
Unit-Tests/: CMakeLists.bak  CMakeLists.txt  GlobalFixture.cpp  GlobalFixture.hpp  main-unit-tests.cpp  pch-unit-tests.cpp  pch-unit-tests.hpp  test-string-functions.cpp
Unit-Tests/CMakeModules/: BoostAddTests.cmake  Discover.Boost.Test.cmake  parse-dot-output.c
Unit-Tests/boost/: CMakeLists.bak  CMakeLists.txt  CMakeLists2.bak
public/String-Extra/: convert-and-translate.hpp  forming.hpp  predicates.hpp
